--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,143 +1,117 @@
-#woo-metawizard-table tbody tr {
-    position: relative;
-}
-
-.woo-metawizard-metabox {
-    background: #fff;
-}
-
+.woo-metawizard-metabox *,
+.woo-metawizard-metabox *::before,
+.woo-metawizard-metabox *::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+.woo-metawizard-metabox body {
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  color: #333;
+  background-color: #fff;
+  line-height: 1.5; }
 .woo-metawizard-metabox h4 {
-    font-size: 16px;
-    color: #333;
-    margin: 0 0 15px;
-    border-bottom: 1px solid #eee;
-    padding-bottom: 5px;
-}
-
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #f9f9f9;
+  padding-bottom: 5px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600; }
 .woo-metawizard-metabox p {
-    margin-bottom: 15px;
-    font-size: 14px;
-    color: #555;
-}
-
-.woo-metawizard-metabox p strong {
-    color: #333;
-}
-
-.woo-metawizard-current,
-.woo-metawizard-placeholder {
-    background: #f9f9f9;
-    border: 1px solid #eee;
-    padding: 15px;
-    border-radius: 6px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
-}
-
-.woo-metawizard-current {
-    margin-bottom: 15px;
-}
-
-.woo-metawizard-placeholder {
-    position: relative;
-}
-
-.woo-metawizard-table {
-    margin-top: 30px;
-    position: relative;
-}
-
-.woo-metawizard-metabox .widefat {
-    width: 100%;
-    max-width: 100%;
-    font-size: 14px;
-    padding: 8px 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    background: #fff;
-    margin-bottom: 15px;
-}
-
+  margin-bottom: 15px;
+  font-size: 14px;
+  color: #555; }
+.woo-metawizard-metabox h4 {
+  padding-bottom: 5px;
+  margin: 0px 0px 15px;
+  border-bottom: 1px solid #c3c4c7; }
+.woo-metawizard-metabox hr {
+  border: none;
+  border-top: 1px solid #eee;
+  margin: 20px 0; }
 .woo-metawizard-metabox textarea.widefat {
-    min-height: 100px;
-}
-
-.woo-metawizard-placeholder hr {
-    border: none;
-    border-top: 1px solid #eee;
-    margin: 20px 0;
-}
-
+  min-height: 100px; }
 .woo-metawizard-metabox button.button {
-    background-color: #0073aa;
-    border-color: #0073aa;
-    color: #fff;
-    text-shadow: none;
-    box-shadow: none;
-    font-size: 14px;
-    padding: 5px 20px;
-    border-radius: 4px;
-    margin-right: 10px;
-    min-width: 120px;
-}
-
-.woo-metawizard-metabox button.button-primary:hover {
+  font-size: 14px;
+  min-width: 120px;
+  padding: 5px 20px;
+  border-radius: 4px; }
+.woo-metawizard-metabox .widefat {
+  width: 100%;
+  max-width: 100%;
+  font-size: 14px;
+  padding: 8px 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  background: #fff;
+  margin-bottom: 15px; }
+.woo-metawizard-metabox .woo-metawizard-current,
+.woo-metawizard-metabox .woo-metawizard-placeholder {
+  background: #f9f9f9;
+  border: 1px solid #ddd;
+  padding: 15px;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px rgba(51, 51, 51, 0.05);
+  margin-bottom: 15px; }
+.woo-metawizard-metabox .woo-metawizard-current {
+  margin-bottom: 15px; }
+  .woo-metawizard-metabox .woo-metawizard-current button.button {
+    margin-top: 15px; }
+.woo-metawizard-metabox .woo-metawizard-placeholder {
+  position: relative; }
+.woo-metawizard-metabox .woo-metawizard-table {
+  margin-top: 30px;
+  position: relative; }
+.woo-metawizard-metabox button.button {
+  background-color: #0073aa;
+  border-color: #0073aa;
+  color: #fff;
+  text-shadow: none;
+  box-shadow: none;
+  font-size: 14px;
+  padding: 5px 30px;
+  border-radius: 4px;
+  margin-right: 5px;
+  min-width: 120px; }
+  .woo-metawizard-metabox button.button:hover {
     background-color: #006799;
-    border-color: #006799;
-}
-
-.woo-metawizard-metabox .row-actions {
-    margin-top: 5px;
-    font-size: 12px;
-    color: #999;
-}
-
-.woo-metawizard-metabox .row-actions a {
-    color: #0073aa;
-    text-decoration: none;
-}
-
-.woo-metawizard-metabox .row-actions a:hover {
-    color: #00a0d2;
-}
-
-.woo-metawizard-metabox table.widefat {
-    width: 100%;
-    border-collapse: collapse;
-    background: #fff;
-}
-
-.woo-metawizard-metabox table.widefat thead th {
+    border-color: #006799; }
+.woo-metawizard-metabox .spinner {
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  visibility: visible;
+  z-index: 1; }
+.woo-metawizard-metabox #woo-metawizard-table {
+  max-height: 400px;
+  overflow-y: auto;
+  width: 100%;
+  border-collapse: collapse;
+  background: white; }
+  .woo-metawizard-metabox #woo-metawizard-table thead th {
+    font-weight: 600;
+    color: #333333;
     background: #f1f1f1;
     padding: 10px;
-    border-bottom: 1px solid #ddd;
-    font-weight: 600;
-    color: #333;
-}
+    border-bottom: 1px solid #dddddd; }
+  .woo-metawizard-metabox #woo-metawizard-table tbody tr {
+    position: relative; }
+    .woo-metawizard-metabox #woo-metawizard-table tbody tr:hover {
+      background: #f9f9f9; }
+    .woo-metawizard-metabox #woo-metawizard-table tbody tr.deleting {
+      opacity: 0.5;
+      transition: opacity 0.3s ease-in-out; }
+  .woo-metawizard-metabox #woo-metawizard-table .row-actions {
+    font-size: 12px;
+    color: #555; }
+    .woo-metawizard-metabox #woo-metawizard-table .row-actions a {
+      color: #0073aa; }
+      .woo-metawizard-metabox #woo-metawizard-table .row-actions a:hover {
+        color: #006799; }
 
-.woo-metawizard-metabox table.widefat tbody td {
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-    vertical-align: top;
-    color: #555;
-}
-
-.woo-metawizard-metabox table.widefat tbody tr.deleting {
-    opacity: 0.5;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.woo-metawizard-metabox table.widefat tbody tr:hover {
-    background: #f9f9f9;
-}
-
-.woo-metawizard-metabox .spinner {
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    position: absolute;
-    right: 0;
-    top: 0;
-    visibility: visible;
-    z-index: 1;
-}
+/*# sourceMappingURL=styles.css.map */
