--- a/assets/css/admin/admin-styles.scss
+++ b/assets/css/admin/admin-styles.scss
@@ -1,9 +1,5 @@
 .woo-metawizard {
 
-    &__field-wrap {
-        
-    }
-
     &__tips {
         align-items: center;
         display: flex;
@@ -23,23 +19,20 @@
             position: relative;
             width: 16px;
         
-            &:hover {
-        
-                &::after {
-                    background-color: #2c3338;
-                    border-radius: 5px;
-                    color: #f0f0f1;
-                    content: attr(aria-label);
-                    font-size: 12px;
-                    font-weight: 400;
-                    left: 25px;
-                    letter-spacing: 0.0125rem;
-                    padding: 10px 15px;
-                    position: absolute;
-                    top: 100%;
-                    white-space: nowrap;
-                    z-index: 10;
-                }
+            &:hover::after {
+                background-color: #2c3338;
+                border-radius: 5px;
+                color: #f0f0f1;
+                content: attr(aria-label);
+                font-size: 12px;
+                font-weight: 400;
+                left: 25px;
+                letter-spacing: 0.0125rem;
+                padding: 10px 15px;
+                position: absolute;
+                top: 100%;
+                white-space: nowrap;
+                z-index: 10;
             }
         }
     }
