--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,27 +10,27 @@
     margin: 0;
     padding: 0; }
   .woo-metawizard-metabox body {
+    background-color: #fff;
+    color: #333;
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    color: #333;
-    background-color: #fff;
     line-height: 1.5; }
   .woo-metawizard-metabox h4 {
-    font-size: 16px;
-    color: #333;
-    margin-bottom: 15px;
     border-bottom: 1px solid #f9f9f9;
-    padding-bottom: 5px;
+    color: #333;
     font-family: "Open Sans", sans-serif;
-    font-weight: 600; }
-  .woo-metawizard-metabox p {
+    font-size: 16px;
+    font-weight: 600;
     margin-bottom: 15px;
+    padding-bottom: 5px; }
+  .woo-metawizard-metabox p {
+    color: #555;
     font-size: 14px;
-    color: #555; }
+    margin-bottom: 15px; }
   .woo-metawizard-metabox h4 {
+    border-bottom: 1px solid #c3c4c7;
     padding-bottom: 5px;
-    margin: 0px 0px 15px;
-    border-bottom: 1px solid #c3c4c7; }
+    margin: 0px 0px 15px; }
   .woo-metawizard-metabox hr {
     border: none;
     border-top: 1px solid #eee;
@@ -38,27 +38,27 @@
   .woo-metawizard-metabox textarea.widefat {
     min-height: 100px; }
   .woo-metawizard-metabox button.button {
+    border-radius: 4px;
     font-size: 14px;
     min-width: 120px;
-    padding: 5px 20px;
-    border-radius: 4px; }
+    padding: 5px 20px; }
   .woo-metawizard-metabox .widefat {
-    width: 100%;
-    max-width: 100%;
-    font-size: 14px;
-    padding: 8px 10px;
+    background: #fff;
     border: 1px solid #ddd;
     border-radius: 4px;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    background: #fff; }
+    font-size: 14px;
+    max-width: 100%;
+    padding: 8px 10px;
+    width: 100%; }
   .woo-metawizard-metabox .woo-metawizard-table,
   .woo-metawizard-metabox .woo-metawizard-current,
   .woo-metawizard-metabox .woo-metawizard-placeholder {
     background: #f9f9f9;
     border: 2px solid #ddd;
-    padding: 15px;
     border-radius: 4px;
-    box-shadow: 0 1px 3px rgba(51, 51, 51, 0.05); }
+    box-shadow: 0 1px 3px rgba(51, 51, 51, 0.05);
+    padding: 15px; }
   .woo-metawizard-metabox .woo-metawizard-current,
   .woo-metawizard-metabox .woo-metawizard-placeholder {
     flex: 1 1 calc(50% - 10px); }
@@ -71,8 +71,8 @@
     position: relative; }
   .woo-metawizard-metabox .woo-metawizard-table {
     border-style: dashed;
-    position: relative;
-    flex: 1 1 100%; }
+    flex: 1 1 100%;
+    position: relative; }
     .woo-metawizard-metabox .woo-metawizard-table__wrap {
       position: relative; }
   .woo-metawizard-metabox button.button {
@@ -81,11 +81,11 @@
     color: #fff;
     text-shadow: none;
     box-shadow: none;
-    font-size: 14px;
-    padding: 5px 30px;
     border-radius: 4px;
+    font-size: 14px;
     margin-right: 5px;
-    min-width: 120px; }
+    min-width: 120px;
+    padding: 5px 30px; }
     .woo-metawizard-metabox button.button:hover {
       background-color: #006799;
       border-color: #006799; }
@@ -99,17 +99,17 @@
     visibility: visible;
     z-index: 1; }
   .woo-metawizard-metabox #woo-metawizard-table {
+    background: white;
+    border-collapse: collapse;
     max-height: 400px;
     overflow-y: auto;
-    width: 100%;
-    border-collapse: collapse;
-    background: white; }
+    width: 100%; }
     .woo-metawizard-metabox #woo-metawizard-table thead th {
-      font-weight: 600;
-      color: #333333;
       background: #f1f1f1;
-      padding: 10px;
-      border-bottom: 1px solid #dddddd; }
+      border-bottom: 1px solid #dddddd;
+      color: #333333;
+      font-weight: 600;
+      padding: 10px; }
     .woo-metawizard-metabox #woo-metawizard-table tbody tr {
       position: relative; }
       .woo-metawizard-metabox #woo-metawizard-table tbody tr:hover {
@@ -118,8 +118,8 @@
         opacity: 0.5;
         transition: opacity 0.3s ease-in-out; }
     .woo-metawizard-metabox #woo-metawizard-table .row-actions {
-      font-size: 12px;
-      color: #555; }
+      color: #555;
+      font-size: 12px; }
       .woo-metawizard-metabox #woo-metawizard-table .row-actions a {
         color: #0073aa; }
         .woo-metawizard-metabox #woo-metawizard-table .row-actions a:hover {
